Update service configuration in render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,15 @@
 services:
-  - type: worker
-    name: telegram-python-runner
-    env: python
+  - type: web
+    name: python-runner-bot
+    runtime: python
+    plan: free
+    region: frankfurt
+
     buildCommand: pip install -r requirements.txt
     startCommand: python bot.py
+
     envVars:
       - key: BOT_TOKEN
         sync: false
-    plan: free  # ⚡ Render free tier'da SINIRSIZ çalışır!
+
+    healthCheckPath: /
